--- a/views/home.html
+++ b/views/home.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        input,button{
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Home Page</h1>
+    <h1>What is Your Name‼</h1>
+
+    <input type="text">
+    <br>
+    <br>
+    <button>
+        send to DB
+    </button>
 </body>
 </html>
